add_subdirectory("${SOURCE_ROOT}/vk_test")
add_subdirectory("${SOURCE_ROOT}/vk_triangle")
add_subdirectory("${SOURCE_ROOT}/vk_vertex_buffer")
add_subdirectory("${SOURCE_ROOT}/vk_uniform_buffer")
add_subdirectory("${SOURCE_ROOT}/vk_texture_mapping")
add_subdirectory("${SOURCE_ROOT}/vk_depth_buffering")
add_subdirectory("${SOURCE_ROOT}/vk_loading_models")
add_subdirectory("${SOURCE_ROOT}/vk_generating_mipmaps")
add_subdirectory("${SOURCE_ROOT}/vk_multisampling")
